# marcus

./: .coveragerc  .dockerignore  .env.example  .gitignore  .marcus_workspace.json  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .secretsignore  :memory:  AGENT_CONTEXT_TOOLS_SECTION.md  AGENT_SYSTEM_PROMPT_WITH_CONTEXT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_AGENT_WITH_CONTEXT_TOOLS.md  CLI.md  CODESPACES_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DOCKER_HUB_PUBLISHING.md  DOCKER_QUICKSTART.md  Dockerfile  IMPLEMENTATION_STEPS.md  INVESTOR_PRESENTATION.md  LOCAL_DEVELOPMENT.md  MIGRATION_NOTES.md  PHASE1_ANALYSIS_INDEX.md  PHASE1_ARCHITECTURE_ANALYSIS.md  PHASE1_QUICK_START.md  PHASE1_SUMMARY.txt  PHASE2_IMPLEMENTATION_PLAN.md  PRESENTATION_GUIDE.md  PROJECT_SUCCESS.md  PROTOCOL.md  Playbook.md  README.md  README_PHASE1_ANALYSIS.md  ROADMAP.md  TEST_INVENTORY.md  (+71 more)
.claude/agents/: docs-organizer.md  github-issue-manager.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
config/: docker-compose.marcus.yml  kanban_connection_options.json  kanban_server_examples.json  mcp.json  pm_agent_config.json  test_config.json
data/: learned_patterns.json  marcus.db-journal
demo/: CORRECTIONS_NEEDED.md  README.md  Why_AI_agents_need_Stoic_Kanban_boards_transcription.txt  demo_script.md  demo_text.md  marcus_cato_deck.pptx  marcus_cato_presentation_guide.docx  marcus_origin_story.docx  slide_deck.md  speaker_notes.md
dev-tools/: README.md
docs/: AUDIT_INDEX.md  AUDIT_QUICK_SUMMARY.md  AUDIT_SUMMARY.md  COMPREHENSIVE_AUDIT_SESSIONS_3_12.md  CONFIGURATION.md  CONFIGURATION_AUDIT.md  COST_ANALYSIS.md  DEMO_RELEASE.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_AUDIT_PLAN.md  DOCUMENTATION_DISCREPANCIES.md  EXPERIMENTS_AGENT_AGNOSTIC_PLANNER.md  HOW_TO_VERIFY_PROJECT.md  LOCAL_DEVELOPMENT.md  MASTER_AUDIT_SUMMARY.md  MASTER_IMPLEMENTATION_ORDER.md  MIGRATION_COMPLETE.md  MVP_3WEEK_PLAN.md  MVP_CATO_ALIGNMENT_EVALUATION.md  PHASE1_REAL_VALUE.md  PROJECT_STALL_ANALYZER.md  PROJECT_SUCCESS.md  Playbook.md  README.md  START-HERE.md  TEST_CLASSIFICATION_GUIDE.md  TOKEN_TRACKING_AUDIT.md  TOOLS_ADDED_TO_AGENTS.md  UNIFIED_MASTER_IMPLEMENTATION_PLAN.md  VERSIONING.md  VERSION_QUICK_REF.md  WEBSITE_SETUP.md  agent-workflow.md  analytics-tools-reference.md  auth-flow-diagram.md  concept_prompt.md  conf.py  configuration.md  display-board-test-coverage-report.md  (+30 more)
enhancements/: context_bridge_presentation.md  marcus-coaching-analogy.md  marcus-memory-proposal.md  visibility_system.md
examples/: agent_select_project.py  autonomous_agent_workflow.py  calculator_project_workflow.py  demo_all_phases.py  demo_http_connection.py  demo_natural_language.py  demo_stdio_connection.py  enhanced_workflow_demo.py  example_usage.py  find_instruction_gaps.py  inspector_demo.py  interaction_examples.py  marcus_features_demo.py  mcp_interaction_example.py  query_project_history_example.py  simple_nl_demo.py  task_decomposition_demo.py  test_board_lock_fix.py  test_board_lock_fix_simple.py  test_inspector_stdio.py  test_new_http_client.py  test_optimal_agents.py  twitter_clone.py  twitter_clone_with_mlflow.py  validate_project_generation.py  verify_project_completion.py  visualize_dependencies.py  worker_client_demo.py
experiments/: EXPERIMENT-PROTOCOL.md  EXPERIMENT_GUIDE.md  README.md  README_SINGLE_AGENT_TRIALS.md  SCORING-GUIDE.md  create_and_analyze_project.py  experiment-tracking-sheet.md  llm_score_project.py  marcus_instances.example.json  nlp_standalone_test.py  pomodoro_prompt.md  run_comparison_experiment.py  run_experiment.py  run_single_agent_trials.py  score_project.py  single-agent-datetime-api-prompt.md  snake_game_single_agent_prompt.md  spawn_agents.py  test_optimal_agents.py  test_optimal_agents_automated.py  test_optimal_automated.py  test_optimal_simple.py  traced_agent_example.py  verify_nlp_board_creation.py
implementation/: .env.example  .gitignore  index.html
issues/: extend_logging.md  github_issue_extend_logging.md
projects/: README.md
prompts/: Agent_prompt.md  checklist_agent_prompt.md  code_style_agent_prompt.py  minimal_agent_prompt.md  minimalist_complete_agent_prompt.md  project_creator.sh  project_creator.txt  system_prompts.md  trigger_action_prompt.md  ultimate_minimal_prompt.md
scripts/: README_demos.md  __init__.py  add_test_markers.py  analyze_stall.py  backfill_run_close_state.py  backfill_task_names.py  bump-version.sh  compare_inference_methods.py  debug_ordering.py  demo_context_system.py  demo_dependency_awareness.py  demo_dependency_disaster.py  demo_enhanced_features_live.py  demo_hybrid_inference.py  demo_investor_pitch.py  demo_memory_system.py  demo_quick_value.py  demo_scenario_todo_app.py  demo_visibility_system.py  diagnose_task_descriptions.py  dump_gotcha_criteria.py  inspect_gap_routing.py  monitor_false_positives.py  preview_project_plan.py  query_memory_data.py  run_tests.py  setup-documentation-tools.sh  show_ai_input.py  show_marcus_stats.py  smoke_test_design_autocomplete.py  test_enhanced_features_integration.py  test_optimal_agents.py  test_ping_cleanup.py  update_server_imports.py  validate_build.sh  view_experiment_data.py
simple-time-api/: checklist.md
simple-todo-app/: README.md  app.py  database.py
tests/: AI_TEST_WRITING_PROMPT.md  README.md  README_NEW.md  README_TESTS.md  REAL_TESTS_README.md  RUNNING_TESTS.md  TEST_DECISION_FLOWCHART.md  TEST_ORGANIZATION_GUIDE.md  TEST_WRITING_GUIDE.md  conftest.py  flaky_tests.json  setup_test_project.py  test-requirements.txt  test_attachment_simple.py  test_attachment_workflow.py  test_infrastructure.py  test_mcp_attachments.py  test_real_attachments.sh
tools/: delete_all_projects.py  setup_marcus_project.sh
twitter-clone/: .secretsignore
viz-dashboard/: .env.example  DEMO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_GUIDE.md  index.html  package.json
viz_backend/: README.md  __init__.py  api.py  data_loader.py  requirements.txt  run_server.py  start_server.sh
(+2189 files in other folders)
