[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marcus-ai"
version = "0.3.4.post1"
description = "Multi-Agent Resource Coordination and Understanding System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Marcus Team", email = "team@marcus.ai"},
]
keywords = [
    "multi-agent",
    "ai",
    "coordination",
    "kanban",
    "mcp",
    "llm",
    "autonomous-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mcp>=1.10.0",
    "anthropic>=0.18.0,<1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=0.8.0",
    "asyncio>=3.4.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "structlog>=24.0.0",
    "jinja2>=3.1.0",
    "mlflow>=2.10.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.25.0",
    "python-dateutil>=2.8.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "requests>=2.28.0",
]
dev = [
    "marcus-ai[test]",
    "mypy>=1.8.0",
    "pydocstyle>=6.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ruff>=0.12.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
    "detect-secrets>=1.4.0",
    "types-aiofiles",
    "types-requests",
    "types-PyYAML",
    "types-python-dateutil",
]

[project.scripts]
marcus = "src.marcus_mcp.server:main"

[project.urls]
Homepage = "https://github.com/lwgray/marcus"
Documentation = "https://marcus-ai.dev"
Repository = "https://github.com/lwgray/marcus"
Issues = "https://github.com/lwgray/marcus/issues"
Changelog = "https://github.com/lwgray/marcus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["src", "src.*", "marcus_mcp", "marcus_mcp.*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

# Per-module options for gradual adoption
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "src.ai.*"
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = "examples.multi_agent_demo.implementation.app.models.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "examples.multi_agent_demo.implementation.app.routes.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "examples.multi_agent_demo.implementation.tests.*"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "src.marcus_mcp.server"
disable_error_code = ["misc", "unused-ignore"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "src.marcus_mcp.agent_server"
disable_error_code = ["misc", "unused-ignore", "no-untyped-call"]
warn_unused_ignores = false

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104", "D202", "D400"]  # D100/D104: module/package docstrings (TODO: add these), D202: blank lines after docstring (conflicts with black), D400: period after first line optional

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_third_party = ["mcp"]
known_first_party = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take > 1 second",
    "asyncio: Async tests",
    "kanban: Tests requiring Kanban server",
]

[tool.bandit]
# Skip B101 (assert_used) for all files since asserts are expected in tests
# Skip B104 (hardcoded_bind_all_interfaces) - needed in security tests to verify custom hosts work
# Skip B105 (hardcoded_password_string) and B106 (hardcoded_password_funcarg)
# for test files since test credentials are expected
# Skip B404 (subprocess import), B607 (partial path), B603 (subprocess without shell)
# for CLI tools where subprocess is necessary and safe
# Skip B110 (try/except/pass) - sometimes necessary for cleanup
# Skip B311 (random) - only used in tests, not for cryptographic purposes
# Skip B608 (hardcoded_sql_expressions) - false positive on AI prompt templates
skips = ["B101", "B104", "B105", "B106", "B404", "B607", "B603", "B110", "B311", "B608"]
